Added some changes

--- a/game.html
+++ b/game.html
@@ -32,6 +32,9 @@
         .message{
             display: none;
         }
+        #number-to-guess{
+            color: blue;
+        }
         
     </style>
 </head>
