--- a/game.html
+++ b/game.html
@@ -31,9 +31,13 @@
         }
         .message{
             display: none;
+            font-weight: bold;
         }
         #number-to-guess{
             color: blue;
+        }
+        #error-message{
+            color:indianred
         }
         
     </style>
@@ -41,12 +45,16 @@
 <body>
     <h1>Guess a number between 10 and 100</h1>
     <div id="align-center">
-        <p><input type="text" id="input" maxlength="3"></p>
-        <button id="guess-button">Submit your guess</button>
+        <p><input type="text" id="input" minlength="2" maxlength="3"></p>
+        <button id="guess-button" a>Submit your guess</button>
         <p><span class="message" id="number-to-guess">The number to guess was</span></p>
         <p><span class="message" id="lucky-message">You guessed right. Congratulations!</span></p>
-        <P><span class="message" id="unlucky-message">You guessed wrong. Better luck next time!</span></p>
+        <p><span class="message" id="unlucky-message">You guessed wrong. Better luck next time!</span></p>
+        <p class="message" id="error-message">Invalid input</p>
     </div>
     <script src ="game.js"></script>
 </body>
 </html>
+
+
+<input type="text">
